# wayfind

./: .gitignore  Cargo.toml  log  logb  package-lock.json  package.json
.github/workflows/: build.yaml
app/: README.md  package-lock.json  package.json  tsconfig.json
app/app/: globals.css  layout.tsx  page.tsx
app/components/: CallStack.tsx  ChatInput.tsx  ChatInterface.tsx  DebugToolbar.tsx  FileCommandHighlightPlugin.tsx  FileInsertDialog.tsx  FileOpener.tsx  FileTree.tsx  LexicalEditor.tsx  MonacoEditor.tsx  OutputViewer.tsx  WatchExpressions.tsx
app/lib/: fileSystem.ts  useQueuedChat.ts  utils.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: debug_state.rs  main.rs
app/src-tauri/src/debugger/: async_listener.rs  client.rs  mod.rs  session.rs  util.rs
components/: ChatInterface.tsx  FileTree.tsx  MonacoEditor.tsx
dap/: .gitignore
dap/js_tests/: test_simple_breakpoint.js
dap/python_tests/: makefile  test_js_simple_breakpoint.py  test_lldb_dap.py  test_no_breakpoints.py  test_py_simple_breakpoint.py  test_simple_breakpoint.py  test_step_into.py  test_step_out.py  test_step_over.py  test_terminate.py  test_unhandled_exceptions.py
dap/rust_tests/: Cargo.toml  makefile
dap/rust_tests/src/: dap_client.rs  main.rs
dap/test_data/: c.py
dap/test_scripts/: api_dap_test.py  dap_test.py  makefile  (+10 more)
landing/: package-lock.json  package.json
server/: README.md  makefile  package-lock.json  package.json  tsconfig.json
webapp/: makefile  next.config.mjs  package-lock.json  package.json
(+41 files in other folders)
