[package]
name = "wayfind"
version = "0.1.0"
description = "A Tauri App"
authors = ["mtn"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.4", features = [] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-log = "2.2.1"
tauri-plugin-shell = "2.2.0"
tokio = { version = "1.43.0", features = ["full"] }
serde_json = "1.0.139"
rand = "0.9.0"
parking_lot = "0.12.3"
regex = "1.11.1"
shellexpand = "3.1.0"
