[package]
name = "rust_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.26"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }

[[bin]]
name = "test_lldb_dap"
path = "src/bin/test_lldb_dap.rs"
